<resources>
    <string name="app_name">Zlito</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="tab_text_1">HOME</string>
    <string name="tab_text_2">EARN</string>
    <string name="tab_text_3">STORE</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="forgotPass">Forgot Password?</string>
    <string name="altApp_name">ZlitoApp</string>
    <string name="waiting">Please wait...</string>
</resources>
